# cyber-physical-systems-monorepo

./: README.md  ROADMAP.md  note_template.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/icd/: ICD_TEMPLATE.md
legacy_coursera/course-1-supervised-ml/: README.md
legacy_coursera/course-1-supervised-ml/week-1/: README.md  week-1-notes.md
legacy_coursera/course-1-supervised-ml/week-2/: README.md  week-2-notes.md
legacy_coursera/course-1-supervised-ml/week-3/: README.md  week-3-notes.md
legacy_coursera/course-2-advanced-learning-algorithms/: README.md
legacy_coursera/course-2-advanced-learning-algorithms/week-1/: README.md  week-1-notes.md
legacy_coursera/course-2-advanced-learning-algorithms/week-2/: README.md  week-2-notes.md
legacy_coursera/course-2-advanced-learning-algorithms/week-3/: README.md  week-3-notes.md
legacy_coursera/course-3-unsupervised-learning-recommenders-rl/: README.md
legacy_coursera/course-3-unsupervised-learning-recommenders-rl/week-1/: README.md  week-1-notes.md
legacy_coursera/course-3-unsupervised-learning-recommenders-rl/week-2/: README.md  week-2-notes.md
src/coursera_ml/course_1/: linear_regression.py  logistic_regression.py  (+1 more)
src/phase_1_epistemology/: so3_equivariance.py
src/phase_2_simulator/: differentiable_physics.py
src/phase_4_mbse/: cbf_safety_filter.py  simplex_manager.py
src/phase_5_edge/: verify_loop.py
tests/: test_simplex_manager.py
tests/course_1/: test_linear_regression.py  test_logistic_regression.py
tests/course_2/: test_neural_network.py
(+5 files in other folders)
